# trainer-core

./: .gitignore  README.md  pyproject.toml
src/trainer_core/: __init__.py  batching.py  callbacks.py  checkpointing.py  config.py  engine.py  exporting.py
tests/: test_engine.py  test_exporting.py
