[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainer-core"
version = "0.1.0"
description = "Reusable PyTorch training engine shared across projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
